status chaveiro alterado

--- a/src/app/modules/gerencial/components/chaveiros/components/add/add.component.html
+++ b/src/app/modules/gerencial/components/chaveiros/components/add/add.component.html
@@ -25,6 +25,7 @@
         <div class="row">
           <mat-form-field appearance="outline">
             <mat-label>Status</mat-label>
+            <mat-icon matPrefix>info</mat-icon>
             <mat-select matInput formControlName="status" type="text" required>
               <mat-option value="disponivel">Disponível</mat-option>
               <mat-option value="indisponivel">Indisponível</mat-option>
