--- a/src/app/modules/gerencial/components/cliente-modal/cliente-modal.component.html
+++ b/src/app/modules/gerencial/components/cliente-modal/cliente-modal.component.html
@@ -4,7 +4,7 @@
     <div class="card-section">
       <div class="row items-center">
         <ng-container>
-          <mat-icon>edit</mat-icon>
+          <mat-icon class="edit_button">edit</mat-icon>
         </ng-container>
         <ng-container>
           <mat-slide-toggle
