--- a/src/app/modules/gerencial/components/chaveiros/components/details/details.component.html
+++ b/src/app/modules/gerencial/components/chaveiros/components/details/details.component.html
@@ -5,13 +5,20 @@
       <div class="card-section">
         <div class="row items-center">
           <ng-container>
-            <mat-icon>edit</mat-icon>
+            <mat-icon class="edit_button" matTooltip="Editar" (click)="openEditModal()">edit</mat-icon>
           </ng-container>
           <ng-container>
-            <mat-slide-toggle color="primary"></mat-slide-toggle>
+            <mat-slide-toggle
+              color="primary"
+              matTooltip="Alterar status"
+              [checked]="chaveiro?.status === 'ativo'"
+              (change)="toggleChaveiroStatus()"
+            >
+
+            </mat-slide-toggle>
           </ng-container>
           <ng-container>
-            <mat-icon>delete_outline</mat-icon>
+            <mat-icon matTooltip="Remover">delete_outline</mat-icon>
           </ng-container>
         </div>
       </div>
