--- a/src/app/modules/gerencial/components/chaveiros/components/details/details.component.scss
+++ b/src/app/modules/gerencial/components/chaveiros/components/details/details.component.scss
@@ -2,6 +2,15 @@
   margin-top: 50px;
 }
 
+.edit_button:hover {
+  color: #0000ff;
+  cursor: pointer;
+}
+
+.custom-dialog-container {
+  z-index: 1000 !important;
+}
+
 .row {
   padding-top: -20px;
   margin-bottom: 20px;
@@ -21,7 +30,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 2000;
+  z-index: 500;
 }
 
 .modal-content {
