--- a/src/app/modules/gerencial/components/dashboard/dashboard.component.scss
+++ b/src/app/modules/gerencial/components/dashboard/dashboard.component.scss
@@ -1,7 +1,16 @@
+.dashboard {
+  position: relative;
+  //overflow-y: hidden;
+}
+
 .cards {
   display: flex;
   justify-content: space-between;
+  //width: 100%;
   gap: 25px;
+  //flex-direction: column;
+  align-items: center;
+  position: absolute;
   margin-top: 80px;
 }
 
@@ -64,6 +73,10 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
+.client-toast-container {
+  margin-top: 150px;
+}
+
 .notification-container {
   position: fixed;
   top: 16px;
@@ -92,4 +105,46 @@
 .notification mat-icon {
   margin-right: 8px;
   color: #f44336; /* Cor do ícone de ponto de exclamação */
+}
+
+
+@media (max-width: 1300px) {
+
+  .cards {
+    margin: 0 auto;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .client-toast-container {
+    margin-top: 400px;
+    margin-bottom: 40px;
+  }
+
+}
+
+
+@media (max-width: 768px) {
+  .cards {
+    flex-direction: column; /* Empilha os cards verticalmente */
+    align-items: center; /* Alinha os cards ao centro */
+    margin: 0 auto;
+    overflow-y: hidden;
+    margin-top: 100px;
+    padding-bottom: 0;
+  }
+
+  .custom-select {
+    //width: 100%; /* Faz o seletor ocupar toda a largura */
+    bottom: 0; /* Remove o bottom */
+  }
+
+  .client-toast-container {
+    margin-top: 350px;
+  }
+
+  .clientes-list {
+    padding: 0 20px; /* Reduz o padding */
+    margin-top: 50px; /* Ajusta a margem */
+  }
 }
