--- a/src/app/modules/gerencial/components/servicos/components/details/details.component.scss
+++ b/src/app/modules/gerencial/components/servicos/components/details/details.component.scss
@@ -2,6 +2,11 @@
   margin-top: 50px;
 }
 
+.edit_button:hover {
+  color: #0000ff;
+  cursor: pointer;
+}
+
 .row {
   padding-top: -20px;
   margin-bottom: 20px;
@@ -20,8 +25,9 @@
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
+  overflow-y: hidden;
   justify-content: center;
-  z-index: 2000;
+  z-index: 500;
 }
 
 .modal-content {
@@ -30,7 +36,7 @@
   border-radius: 8px;
   max-width: 90%;
   max-height: 90%;
-  overflow-y: auto;
+  overflow-y: hidden;
   text-align: left;
   position: relative;
 }
@@ -45,4 +51,23 @@
   display: block;
   margin: 0 auto 20px;
   border-radius: 8px;
+}
+
+.close-button {
+  margin-top: 20px;
+  background-color: #515151;
+  width: 100%;
+  float: right;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  border: 1px solid black;
+  color: black;
+  font-weight: bold;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.close-button:hover {
+  background-color: #496c7c;
+  cursor: pointer;
 }
