--- a/src/app/modules/shared/components/toolbar/toolbar.component.html
+++ b/src/app/modules/shared/components/toolbar/toolbar.component.html
@@ -2,7 +2,7 @@
   <img *ngIf="admin?.imageUrl" [src]="admin?.imageUrl" height="50" width="70">
   <div class="welcome">
     <small class="welcome small">Seja bem vindo!!</small>
-    <p> {{ admin?.name }}</p>
+    <p class="welcome">{{ admin?.name }}</p>
   </div>
   <mat-icon mat-button [matMenuTriggerFor]="menu">keyboard_arrow_down</mat-icon>
 </div>
