--- a/src/app/modules/shared/components/toolbar/toolbar.component.scss
+++ b/src/app/modules/shared/components/toolbar/toolbar.component.scss
@@ -1,23 +1,24 @@
 .toolbar{
   gap: 12px;
-  width: 250px;
+  width: 300px;
   margin-right: 20px;
-  height: 70px;
+  height: 80px;
   display: flex;
   align-items: center;
-  border: 1px solid white;
+  border: 2px solid rgb(16, 138, 225);
   padding: 0px 20px;
   border-radius: 12px;
   box-shadow: rgba(50, 50, 93, 0) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -52px;
 
   img{
     border-radius: 50%;
+    height: 65px;
   }
 
   .welcome {
-    color: #000000;
+    color: #ffffff;
     font-size: large;
     font-weight: bold;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Times New Roman', Times, serif;
   }
 }
