--- a/src/app/modules/gerencial/components/chaveiros/components/add/add.component.html
+++ b/src/app/modules/gerencial/components/chaveiros/components/add/add.component.html
@@ -27,8 +27,8 @@
             <mat-label>Status</mat-label>
             <mat-icon matPrefix>info</mat-icon>
             <mat-select matInput formControlName="status" type="text" required>
-              <mat-option value="disponivel">Disponível</mat-option>
-              <mat-option value="indisponivel">Indisponível</mat-option>
+              <mat-option value="ativo">Disponível</mat-option>
+              <mat-option value="inativo">Indisponível</mat-option>
             </mat-select>
           </mat-form-field>
 
