--- a/src/app/modules/gerencial/components/servicos/components/details/details.component.html
+++ b/src/app/modules/gerencial/components/servicos/components/details/details.component.html
@@ -11,7 +11,7 @@
             <mat-slide-toggle
               color="primary"
               matTooltip="Alterar status"
-              [checked]="service?.status === 'pronto'"
+              [checked]="service?.status === 'ativo'"
               (change)="toggleServiceStatus()"
             >
 
