--- a/src/app/modules/gerencial/components/servicos/components/add/add.component.html
+++ b/src/app/modules/gerencial/components/servicos/components/add/add.component.html
@@ -29,7 +29,6 @@
             <mat-icon matPrefix>work</mat-icon>
             <input id="service" formControlName="service" type="text" matInput apenasLetras />
           </mat-form-field>
-
         </div>
 
         <div class="row">
@@ -37,8 +36,8 @@
             <mat-label>Status</mat-label>
             <mat-icon matPrefix>info</mat-icon>
             <mat-select formControlName="status" required>
-              <mat-option value="pronto">Pronto</mat-option>
-              <mat-option value="andando">Em andamento</mat-option>
+              <mat-option value="ativo">Pronto</mat-option>
+              <mat-option value="inativo">Em andamento</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
