--- a/src/app/modules/gerencial/components/servicos/components/edit-service-modal/edit-service-modal.component.html
+++ b/src/app/modules/gerencial/components/servicos/components/edit-service-modal/edit-service-modal.component.html
@@ -39,7 +39,12 @@
           <mat-form-field class="w-full">
             <mat-label>Status</mat-label>
             <mat-icon matPrefix>info</mat-icon>
-            <input id="status" formControlName="status" type="text" matInput autocomplete="status" />
+            <!--<input id="status" formControlName="status" type="text" matInput autocomplete="status" />-->
+            <mat-select formControlName="status">
+              <mat-option value="ativo">Ativo</mat-option>
+              <mat-option value="inativo">Inativo</mat-option>
+              <mat-option value="pendente">Pendente</mat-option>
+            </mat-select>
           </mat-form-field>
         </div>
 
