--- a/src/app/modules/gerencial/components/chaveiros/components/list/list.component.html
+++ b/src/app/modules/gerencial/components/chaveiros/components/list/list.component.html
@@ -1,5 +1,5 @@
 <app-list-table
-  [listTable]="chaveiros"
+  [listTable]="filteredChaveiros"
   [displayedColumns]="headers"
   [useButton]="true"
   buttonLabel="Adicionar chaveiro"
