--- a/src/app/modules/gerencial/components/cliente-modal/cliente-modal.component.html
+++ b/src/app/modules/gerencial/components/cliente-modal/cliente-modal.component.html
@@ -3,10 +3,11 @@
   <div class="modal-content" (click)="$event.stopPropagation()">
     <div class="card-section">
       <div class="row items-center">
+        <!--<ng-container>
+          <mat-icon class="edit_button" matTooltip="Editar" (click)="openEditModal()">edit</mat-icon>
+        </ng-container>-->
         <ng-container>
-          <mat-icon class="edit_button">edit</mat-icon>
-        </ng-container>
-        <ng-container>
+
           <!--<mat-slide-toggle
             color="primary"
             matTooltip="Alterar status"
