--- a/src/app/modules/home/forgot-password/forgot-password.component.html
+++ b/src/app/modules/home/forgot-password/forgot-password.component.html
@@ -29,7 +29,7 @@
   <form class="form" [formGroup]="forgotForm" (ngSubmit)="forgotPassword()">
     <mat-form-field appearance="fill">
       <mat-label class="font">E-mail</mat-label>
-      <mat-icon matPrefix color="primary">email</mat-icon>
+      <mat-icon class="icone_email" matPrefix>email</mat-icon>
       <input type="text" matInput formControlName="email" required />
     </mat-form-field>
 
