--- a/src/app/modules/home/forgot-password/forgot-password.component.scss
+++ b/src/app/modules/home/forgot-password/forgot-password.component.scss
@@ -3,7 +3,7 @@
 .texto_voltar {
   color: #508bcf;
   font-size: 20px;
-  transition: transform 0.5s;
+  transition: transform 0.2s;
   margin-top: 6px;
   font-family: 'Times New Roman', Times, serif;
 }
@@ -18,12 +18,20 @@
   width: 30px;
 }
 
+.icone_email {
+  color: #0000ff;
+}
+
 .font {
-  color: blue;
+  color: #0000ff;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 18px;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 .texto_voltar:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 .link_voltar {
