--- a/src/app/modules/home/signin/signin.component.html
+++ b/src/app/modules/home/signin/signin.component.html
@@ -5,7 +5,6 @@
     <p class="welcome">
       <mat-icon
         class="animated-icon"
-        color="primary"
         style="vertical-align: middle; margin-right: 8px;"
       >
         waving_hand
@@ -21,12 +20,12 @@
   <form class="form" [formGroup]="signinForm" >
     <mat-form-field appearance="fill">
       <mat-label class="font">E-mail</mat-label>
-      <mat-icon matPrefix color="primary">email</mat-icon>
+      <mat-icon class="icon-mail" matPrefix>email</mat-icon>
       <input type="text" matInput formControlName="credential" />
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label class="font">Senha</mat-label>
-      <mat-icon matPrefix color="primary">lock</mat-icon>
+      <mat-icon class="icon-password" matPrefix>lock</mat-icon>
       <input matInput [type]="hide ? 'password' : 'text'"  formControlName="password"/>
       <mat-icon matSuffix (click)="hide = !hide">{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
     </mat-form-field>
@@ -34,7 +33,6 @@
     <p class="primary">
       <mat-icon
         class="animated-icon"
-        color="primary"
         style="vertical-align: middle; margin-right: 8px;"
       >
         help_outline
