--- a/src/app/modules/shared/components/form-actions/form-actions.component.html
+++ b/src/app/modules/shared/components/form-actions/form-actions.component.html
@@ -1,10 +1,12 @@
 <div class="actions">
-  <app-button 
-    type="outline"
-    (click)="back()">Cancelar</app-button>
   <app-button
+    type="outline"
+    (click)="back()"
+  >Fechar
+  </app-button>
+  <!--<app-button
     type="fill"
     (click)="clickSaveEvent.emit($event)"
     *ngIf="showSaveButton">Salvar
-  </app-button>
+  </app-button>-->
 </div>
