--- a/src/app/modules/gerencial/components/chaveiros/components/edit-chaveiro-modal/edit-chaveiro-modal.component.html
+++ b/src/app/modules/gerencial/components/chaveiros/components/edit-chaveiro-modal/edit-chaveiro-modal.component.html
@@ -38,7 +38,10 @@
           <mat-form-field class="w-full">
             <mat-label>Status</mat-label>
             <mat-icon matPrefix>info</mat-icon>
-            <input id="status" formControlName="status" type="text" matInput autocomplete="status" />
+            <mat-select formControlName="status">
+              <mat-option value="ativo">Ativo</mat-option>
+              <mat-option value="inativo">Inativo</mat-option>
+            </mat-select>
           </mat-form-field>
         </div>
 
