--- a/src/app/modules/gerencial/components/settings/components/details/details.component.html
+++ b/src/app/modules/gerencial/components/settings/components/details/details.component.html
@@ -10,7 +10,7 @@
 
 <h2 class="text-3xl font-medium mb-3">{{ userId ? 'Editar' : 'Novo' }} administrador</h2>
 <section class="details">
-  <app-card-section text="Dados cadastrais">
+  <app-card-section text="Dados do administrador">
     <form class="text-sm pb-10" [formGroup]="adminForm" (submit)="onSubmit()">
       <div class="row ">
         <mat-form-field class="field-name" appearance="outline">
@@ -46,8 +46,8 @@
       </div>
       <p class="title">Permissões</p>
 
-      <ul class="mt-5 grid gap-3 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
-        <li class="border border-gray-200 px-3 py-2 flex justify-between items-center" *ngFor="let item of permissions">
+      <ul class="permissions-container">
+        <li class="permissions-links border border-gray-800 " *ngFor="let item of permissions">
           <label [htmlFor]="item.title">{{ item.title| titlecase }}</label>
           <mat-checkbox [disabled]="false"
             [id]="item.title"
