--- a/src/app/modules/shared/components/form-actions/form-actions.component.scss
+++ b/src/app/modules/shared/components/form-actions/form-actions.component.scss
@@ -1,6 +1,8 @@
 .actions{
   display: flex;
-  justify-content: flex-end;
-  height: 50px;
+  //justify-content: flex-end;
+  justify-content: center;
+  height: 20px;
+  margin-bottom: 20px;
   gap: 24px;
 }
