--- a/src/app/modules/gerencial/components/clientes/components/details/details.component.scss
+++ b/src/app/modules/gerencial/components/clientes/components/details/details.component.scss
@@ -7,6 +7,11 @@
   cursor: pointer;
 }
 
+.delete_button:hover {
+  color: #ff0000;
+  cursor: pointer;
+}
+
 .custom-dialog-container {
   z-index: 1000 !important;
 }
