--- a/src/app/modules/gerencial/components/servicos/components/details/details.component.scss
+++ b/src/app/modules/gerencial/components/servicos/components/details/details.component.scss
@@ -7,6 +7,11 @@
   cursor: pointer;
 }
 
+.delete_button:hover {
+  color: #ff0000;
+  cursor: pointer;
+}
+
 .row {
   padding-top: -20px;
   margin-bottom: 20px;
