--- a/src/app/modules/shared/components/dashboard-card/dashboard-card.component.scss
+++ b/src/app/modules/shared/components/dashboard-card/dashboard-card.component.scss
@@ -5,7 +5,7 @@
   position: relative;
   align-items: center;
   justify-content: center;
-  width: 400px;
+  width: 350px;
   padding: 30px;
   box-shadow: rgba(14, 14, 39, 0) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -12px;
   border-radius: 12px;
@@ -15,7 +15,7 @@
     overflow: hidden;
     white-space: nowrap;
     font-size: 24px;
-    color: #000000;
+    color: #0a0ae0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-style: oblique;
     font-weight: bold;
