--- a/src/app/modules/gerencial/components/dashboard/dashboard.component.scss
+++ b/src/app/modules/gerencial/components/dashboard/dashboard.component.scss
@@ -6,9 +6,7 @@
 .cards {
   display: flex;
   justify-content: space-between;
-  //width: 100%;
   gap: 25px;
-  //flex-direction: column;
   align-items: center;
   position: absolute;
   margin-top: 80px;
@@ -184,9 +182,6 @@
   }
 }
 
-
-
-
 @media (max-width: 1300px) {
 
   .cards {
@@ -199,9 +194,7 @@
     margin-top: 400px;
     margin-bottom: 40px;
   }
-
 }
-
 
 @media (max-width: 768px) {
   .cards {
@@ -214,8 +207,7 @@
   }
 
   .custom-select {
-    //width: 100%; /* Faz o seletor ocupar toda a largura */
-    bottom: 0; /* Remove o bottom */
+    bottom: 0;
   }
 
   .client-toast-container {
