--- a/project/src/app/modules/home/home.component.html
+++ b/project/src/app/modules/home/home.component.html
@@ -8,7 +8,7 @@
   <div class="field-description">
 
     <div class="pedido">
-      <h2 class="select-role">Solicite um serviço . . .</h2>
+      <h2 class="select-role">Faça o seu pedido . . .</h2>
       <mat-form-field appearance="fill">
         <mat-icon class="custom-select" matPrefix>key</mat-icon>
         <mat-select [(ngModel)]="selectedService" multiple (selectionChange)="onServiceChange($event)">
