--- a/project/src/app/modules/gerencial/components/chaveiros/components/list/list.component.html
+++ b/project/src/app/modules/gerencial/components/chaveiros/components/list/list.component.html
@@ -1,8 +1,9 @@
 <app-list-table
   [listTable]="filteredChaveiros"
   [displayedColumns]="headers"
-  [useButton]="true"
-  buttonLabel="Adicionar chaveiro"
   [routerLinkAction]="'/gerencial/chaveiros/new'"
   (clickRowEvent)="goToDetails($event)">
 </app-list-table>
+
+<!-- [useButton]="true" -->
+<!-- buttonLabel="Adicionar chaveiro" -->
