--- a/project/src/app/modules/gerencial/components/clientes/components/list/list.component.html
+++ b/project/src/app/modules/gerencial/components/clientes/components/list/list.component.html
@@ -1,8 +1,9 @@
 <app-list-table
   [listTable]="clientes"
   [displayedColumns]="headers"
-  [useButton]="true"
-  buttonLabel="Adicionar cliente"
   [routerLinkAction]="'/gerencial/clientes/new'"
   (clickRowEvent)="goToDetails($event)">
 </app-list-table>
+
+<!-- [useButton]="true" -->
+<!-- buttonLabel="Adicionar cliente" -->
