--- a/project/src/app/modules/shared/components/form-actions/form-actions.component.scss
+++ b/project/src/app/modules/shared/components/form-actions/form-actions.component.scss
@@ -5,3 +5,13 @@
   margin-bottom: 20px;
   gap: 24px;
 }
+
+.button_actions {
+  transition: transform 0.3s;
+}
+
+.button_actions:hover{
+  background-color: #93c0d4;
+  height: 38px;
+  transform: scaleX(1.05);
+}
