Added Angular CLI as dev dependency

--- a/project/src/app/modules/gerencial/components/dashboard/dashboard.component.scss
+++ b/project/src/app/modules/gerencial/components/dashboard/dashboard.component.scss
@@ -1,6 +1,13 @@
 .dashboard {
   position: relative;
 }
+.icon_notifications {
+  //float: right;
+  position: relative;
+  margin-top: -80px;
+  margin-bottom: 20px;
+  z-index: 99999;
+}
 .cards {
   display: flex;
   justify-content: space-between;
