--- a/src/app/modules/home/signin/signin.component.scss
+++ b/src/app/modules/home/signin/signin.component.scss
@@ -4,7 +4,9 @@
   color: red;
   font-weight: lighter;
   text-align: center;
+  font-size: 30px;
   margin-bottom: 30px;
+  margin-top: 20px;
   font-family:'Times New Roman', Times, serif;
   animation: infiniteZoom 0.6s infinite;
 }
@@ -28,7 +30,7 @@
     .welcome{
       font-size: calc($font-size + 10px);
       //color: $primary;
-      color: #2331cb;
+      color: #59a0fc;
       font-weight: bold;
     }
 
@@ -84,11 +86,11 @@
   .animated-icon {
     display: inline-block;
     animation: shake 1.5s infinite;
-    color: #2331cb;
+    color: #59a0fc;
   }
 
   .primary {
-    color: #2331cb;
+    color: #59a0fc;
   }
 
   @keyframes shake {
