--- a/src/app/modules/home/reset-password/reset-password.component.scss
+++ b/src/app/modules/home/reset-password/reset-password.component.scss
@@ -47,7 +47,8 @@
     margin-bottom: 24px;
     .welcome{
       font-size: calc($font-size + 10px);
-      color: $primary;
+      //color: $primary;
+      color: #59a0fc;
     }
 
     .description{
