--- a/src/app/modules/shared/components/toolbar/toolbar.component.html
+++ b/src/app/modules/shared/components/toolbar/toolbar.component.html
@@ -4,7 +4,7 @@
     <small class="welcome small">Seja bem vindo!!</small>
     <p class="welcome">{{ admin?.name }}</p>
   </div>
-  <mat-icon mat-button [matMenuTriggerFor]="menu">keyboard_arrow_down</mat-icon>
+  <mat-icon class="arrow_down" mat-button [matMenuTriggerFor]="menu">keyboard_arrow_down</mat-icon>
 </div>
 
 <mat-menu #menu="matMenu">
