--- a/src/app/modules/home/forgot-password/forgot-password.component.scss
+++ b/src/app/modules/home/forgot-password/forgot-password.component.scss
@@ -44,6 +44,7 @@
 }
 
 .animated-icon {
+  color: #59a0fc;
   display: inline-block;
   animation: shake 1.5s infinite;
 }
@@ -71,7 +72,8 @@
     margin-bottom: 24px;
     .welcome{
       font-size: calc($font-size + 10px);
-      color: $primary;
+      //color: $primary;
+      color: #59a0fc;
     }
 
     .description{
