--- a/src/app/modules/shared/components/dashboard-card/dashboard-card.component.scss
+++ b/src/app/modules/shared/components/dashboard-card/dashboard-card.component.scss
@@ -25,7 +25,7 @@
     border-radius: 50%;
     width: 64px;
     height: 64px;
-    color: #efe055;
+    color: #59a0fc;
     display: flex;
     align-items: center;
     justify-content: center;
