--- a/src/app/modules/shared/components/toolbar/toolbar.component.scss
+++ b/src/app/modules/shared/components/toolbar/toolbar.component.scss
@@ -8,7 +8,7 @@
   border: 2px solid rgb(48, 236, 253);
   padding: 0px 20px;
   border-radius: 12px;
-  box-shadow: rgba(50, 50, 93, 0) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -52px;
+  box-shadow: rgba(50, 50, 93, 0) 0px 50px 100px -20px, rgba(0, 0, 0, 0.6) 0px 30px 60px -52px;
 
   img{
     border-radius: 50%;
@@ -20,6 +20,14 @@
     font-size: large;
     font-weight: lighter;
     font-family:'Times New Roman', Times, serif;
+  }
+
+  .arrow_down {
+    cursor: pointer;
+  }
+
+  .arrow_down:hover {
+    color: #ffab2d;
   }
 
 }
